# Tracker

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose-local.yaml  main.py  pyproject.toml
.github/workflows/: CI.yml  main.yml
configs/: app_config.py
docker/: app.sh
migrations/: env.py
migrations/versions/: 0c8a0f84b1d9_upgrade_relationships.py  2ad9b9971266_create_tasks_collaborators_table.py  2cb061bd0acc_update_models.py  2cf22df6d5f8_create_all_tables.py  3e9b574c938f_create_user_table.py  65f325cd89b5_update.py  8c8a48e48b65_create.py  c8780ace4baf_delete_projects_users_db.py  c9dd8ba4cfe0_create_all_tables.py
src/: alembic.ini  main.py
src/alembic/: env.py
src/alembic/versions/: bb324ea57574_create_users_table.py
src/api/: handlers.py  schemas.py
src/api/actions/: user.py
src/api/actions/project/: crud.py  utils.py
src/api/actions/task/: crud.py  utils.py
src/api/actions/user/: crud.py  user_crud.py
src/api/handlers/: __init__.py  login.py  login_utils.py  project.py  task.py  user.py  user_handlers.py
src/api/schemas/: project.py  task.py  token.py  user.py
src/auth/: hasher.py  jwt-private.pem  jwt-public.pem  jwt.py
src/db/: dals.py  models.py  modles.py  session.py
src/db/dals/: project.py  task.py  user.py  user_dal.py
src/db/models/: __init__.py  base.py  project.py  project_collabarators.py  project_collaborators.py  project_user.py  task.py  task_collaborators.py  user.py  user_model.py
tests/: conftest.py  test_main.py
tests/migrations_test/: env.py
tests/migrations_test/versions/: 1ef570d34190_new_rev_for_test.py
