[tool.poetry]
name = "tracker"
version = "0.1.0"
description = ""
authors = ["Yaroslav <yarikbritov@yandex.ru>", "suredrope"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = { extras = ["standart"], version = "^0.25.0" }
fastapi = "^0.108.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
httpx = "^0.26.0"
black = "^23.12.1"
mypy = "^1.8.0"
pylint = "^3.0.3"
poethepoet = { extras = ["poetry-plugin"], version = "^0.24.4" }
coverage = { extras = ["toml"], version = "^7.4.0" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.report]
fail_under = 80

[tool.poe.tasks.fmt]
help = "Format code using black & isort."
shell = '''
        isort src/
        black -l 79 src/
        '''

[tool.poe.tasks.lint]
help = "Run pylint, black, mypy linters"
shell = '''
        mypy --ignore-missing-imports src/
        pylint src/
        black -l 79 --check src/
        '''

[tool.poe.tasks.test]
help = "Run pytest and coverage report"
shell = '''
        coverage run -m pytest && coverage report -m --skip-covered
        '''
